--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -2,7 +2,7 @@
 Vagrant.configure("2") do |config|
 
   config.vm.box = "centos/7"
-  
+  #config.vm.synced_folder "", "/vagrant"
   config.vm.provision "shell", inline: <<-SHELL
     sudo yum update -y
     sudo yum install -y epel-release
